@@ -1,9 +1,15 @@
 # -*- cperl -*-
 # $Author: ddumont $
 # $Date: 2008-07-04 16:14:06 +0200 (Fri, 04 Jul 2008) $
-# $Revision: 847 $
+# $Revision: 852 $
 
 # test augeas backend 
+
+# workaround Augeas locale bug
+if ($ENV{LANG} ne 'C') {
+  $ENV{LANG} = 'C';
+  exec("perl $0 @ARGV");
+}
 
 use ExtUtils::testlib;
 use Test::More ;
